[gd_scene load_steps=25 format=3 uid="uid://dgo2r1iybfy7i"]

[ext_resource type="Texture2D" path="res://Graphics/Battle/Grid/GridFlash.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://clqxhy8gexx25" path="res://Graphics/Battle/Grid/GridGlowMask.png" id="2"]
[ext_resource type="Script" path="res://Objects/Battle/GridObjects/GridPiece.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c4nl305cd43sb" path="res://Graphics/Battle/Grid/GridPiece.png" id="4"]
[ext_resource type="Texture2D" uid="uid://chikiyuuyftfj" path="res://Graphics/UI/Arrows/EnemySelection.tres" id="5"]
[ext_resource type="Texture2D" uid="uid://xs2od882icci" path="res://Graphics/Battle/Grid/warning.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bcj86rqsfogbs" path="res://Graphics/Battle/Grid/Wheel.png" id="7"]
[ext_resource type="Texture2D" uid="uid://d10k40wyqhm44" path="res://Graphics/UI/Arrows/EnemySelectable.png" id="8"]
[ext_resource type="Texture2D" uid="uid://8wypa7k2dgs" path="res://Graphics/Battle/Grid/GridPieceShort.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cm1ei1ynmqrsr" path="res://Graphics/Battle/Grid/GuideH.png" id="10_8gbdn"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "glow"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subnodes:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fotmd"]
_data = {
"RESET": SubResource("2"),
"glow": SubResource("1")
}

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("6")
region = Rect2(0, 0, 36, 24)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("6")
region = Rect2(36, 0, 36, 24)

[sub_resource type="SpriteFrames" id="5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("7")
region = Rect2(0, 0, 36, 62)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("7")
region = Rect2(36, 0, 36, 62)

[sub_resource type="SpriteFrames" id="8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(32, 20)

[sub_resource type="Animation" id="13"]
resource_name = "appear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subnodes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subnodes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 85), Vector2(0, 0)]
}

[sub_resource type="Animation" id="12"]
resource_name = "fall"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subnodes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, 85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subnodes:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="11"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subnodes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, -2), Vector2(-2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0dyg"]
_data = {
"appear": SubResource("13"),
"fall": SubResource("12"),
"shake": SubResource("11")
}

[node name="GridPiece" type="Node2D" groups=["grid_piece"]]
self_modulate = Color(1, 1, 1, 0)
script = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fotmd")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Arrow" type="TextureRect" parent="CanvasLayer"]
visible = false
texture = ExtResource("5")
flip_h = true

[node name="SmallArrow" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.847059)
texture = ExtResource("8")
flip_h = true

[node name="Subnodes" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("2")

[node name="Wall" type="Sprite2D" parent="Subnodes"]
show_behind_parent = true
position = Vector2(0, 19)
texture = ExtResource("4")

[node name="Wall2" type="Sprite2D" parent="Subnodes"]
visible = false
show_behind_parent = true
position = Vector2(0, 19)
texture = ExtResource("9")

[node name="Sprite" type="Sprite2D" parent="Subnodes"]
show_behind_parent = true
texture = ExtResource("1")

[node name="Objects" type="Node2D" parent="Subnodes"]

[node name="FObjects" type="Node2D" parent="Subnodes"]

[node name="Warning" type="AnimatedSprite2D" parent="Subnodes"]
visible = false
sprite_frames = SubResource("5")
frame = 1
frame_progress = 0.3708

[node name="Wheel" type="AnimatedSprite2D" parent="Subnodes"]
visible = false
position = Vector2(0, 19)
sprite_frames = SubResource("8")

[node name="Label" type="Label" parent="Subnodes"]
visible = false
modulate = Color(0, 0.254902, 1, 1)
text = "10"

[node name="Guides" type="Node2D" parent="Subnodes"]

[node name="R1" type="Sprite2D" parent="Subnodes/Guides"]
z_index = -1
position = Vector2(93, -11)
texture = ExtResource("10_8gbdn")

[node name="R2" type="Sprite2D" parent="Subnodes/Guides"]
z_index = -1
position = Vector2(93, 11)
texture = ExtResource("10_8gbdn")
flip_v = true

[node name="WarnTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["grid_piece_collision"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("10")

[node name="Collapse" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p0dyg")
}

[connection signal="timeout" from="WarnTimer" to="." method="_on_WarnTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
